Add get version method
